BaSP-W06-2023: corrected navbar in log-in and sign-up version mobile

--- a/Week-06/CSS/common.css
+++ b/Week-06/CSS/common.css
@@ -78,6 +78,10 @@ p{
 .sign-up-main nav{
     margin: 100px 50px 20px;
 }
+.log-in-main nav ul,
+.sign-up-main nav ul{
+    height: 150px;
+}
 
 .sign-up-form,
 .log-in-form{
